add start wizard application